--- a/src/components/HeaderSection/HeaderSection.scss
+++ b/src/components/HeaderSection/HeaderSection.scss
@@ -1,8 +1,8 @@
 @import "../variables";
 
 .header-section{
-  background: $secondary;
-  color: white;
+  background: $light;
+  color: $secondary;
   height: 100vh;
   display: flex;
   justify-content: center;
