--- a/src/components/Project/Project.scss
+++ b/src/components/Project/Project.scss
@@ -4,9 +4,13 @@
   box-shadow: 1px 1px 4px black;
   transition: all 200ms ease-out;
   position: relative;
+  margin-top: 1rem;
+  text-decoration: none!important;
+  background: $light;
   &:hover{
     transform: scale(1.1);
     cursor: pointer;
+    text-decoration: none!important;
   }
   .image{
     width: 100%;
@@ -21,8 +25,18 @@
     background: $gradient;
     color: white;
     text-align: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+//    position: absolute;
+//    bottom: 0;
+//    left: 0;
+  }
+  .link{
+    &:hover{
+      text-decoration: none;
+    }
+  }
+  .description{
+    color: #707070;
+    background: $light;
+    padding: 1rem;
   }
 }
