--- a/src/components/Tab/Tab.scss
+++ b/src/components/Tab/Tab.scss
@@ -2,7 +2,7 @@
 
 .tab{
   width: 100%;
-  background: $secondary;
+  background: $light;
   padding: 1rem 0.5rem 0 0.5rem;
   color: white;
   .tab-child{
