--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,11 @@
 h1, h2, h3{
   font-family: Bungee-Regular;
 }
+
+
+.paper{
+  padding: 1rem;
+  background: #F1F1F1;
+  width: 100%;
+  box-shadow: 1px 1px 3px #ccc;
+}
