--- a/src/components/ContactButtonParallax/ContactButtonParallax.scss
+++ b/src/components/ContactButtonParallax/ContactButtonParallax.scss
@@ -11,23 +11,15 @@
     font-size: 1.5rem;
     margin-bottom: 0;
   }
-  a{
+  .slide-button{
     min-width: 80%;
     text-align: center;
     position: relative;
     display: block;
-    background: $light;
     padding: 1rem 0.6rem;
-    color: $secondary;
     border-radius: 4px;
-    transition: all 100ms ease-out;
     font-weight: bold;
     font-size: 1.2rem;
-    &:hover{
-      text-decoration: none;
-      background: $secondary;
-      color: $light;      
-    }
   }
 }
 
@@ -36,7 +28,7 @@
     width: 75%;
     padding-left: 5rem;
     padding-right: 5rem;
-    a{
+    .slide-button{
       min-width: 50%;
       text-align: center;
 
