--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -29,9 +29,7 @@ $hover: $light;
     margin: 0;
     padding: 0;
     text-align: left;
-    &.show {
-      display: block;
-    }
+    transition: all 300ms ease;
     &.hidden {
       height: 0;
       display: none;
